Add solutions for exercises in chapter 2

--- a/solutions.tex
+++ b/solutions.tex
@@ -3,6 +3,7 @@
 % Packages for better formatting
 \usepackage{amsmath}  % For math symbols
 \usepackage{amssymb}  % For additional math symbols
+\usepackage{graphicx}
 
 \setlength{\parindent}{0pt}  % Turn off indentation globally
 
@@ -16,6 +17,6 @@
 \maketitle
 
 % Include exercise files
-\input{chapter1}
-
+\input{chapters_latex/chapter1}
+\input{chapters_latex/chapter2}
 \end{document}
