Add solutions for exercises in chapter 3

--- a/solutions.tex
+++ b/solutions.tex
@@ -7,6 +7,8 @@
 
 \setlength{\parindent}{0pt}  % Turn off indentation globally
 
+\DeclareMathOperator*{\argmin}{argmin}
+\DeclareMathOperator*{\argmax}{argmax}
 
 \title{Exercise solutions for Reinforcement Learning: An Introduction [2nd Edition]}
 \author{Mátyás Pólya}
@@ -19,4 +21,5 @@
 % Include exercise files
 \input{chapters_latex/chapter1}
 \input{chapters_latex/chapter2}
+\input{chapters_latex/chapter3}
 \end{document}
