Add solutions for exercises in chapter 4

--- a/solutions.tex
+++ b/solutions.tex
@@ -4,6 +4,7 @@
 \usepackage{amsmath}  % For math symbols
 \usepackage{amssymb}  % For additional math symbols
 \usepackage{graphicx}
+\usepackage{float}
 
 \setlength{\parindent}{0pt}  % Turn off indentation globally
 
@@ -22,4 +23,5 @@
 \input{chapters_latex/chapter1}
 \input{chapters_latex/chapter2}
 \input{chapters_latex/chapter3}
+\input{chapters_latex/chapter04}
 \end{document}
