--- a/solutions.tex
+++ b/solutions.tex
@@ -20,8 +20,8 @@
 \maketitle
 
 % Include exercise files
-\input{chapters_latex/chapter1}
-\input{chapters_latex/chapter2}
-\input{chapters_latex/chapter3}
+\input{chapters_latex/chapter01}
+\input{chapters_latex/chapter02}
+\input{chapters_latex/chapter03}
 \input{chapters_latex/chapter04}
 \end{document}
