Add solutions for exercises in chapter 5

--- a/solutions.tex
+++ b/solutions.tex
@@ -5,6 +5,7 @@
 \usepackage{amssymb}  % For additional math symbols
 \usepackage{graphicx}
 \usepackage{float}
+\usepackage{xcolor}
 
 \setlength{\parindent}{0pt}  % Turn off indentation globally
 
@@ -24,4 +25,5 @@
 \input{chapters_latex/chapter02}
 \input{chapters_latex/chapter03}
 \input{chapters_latex/chapter04}
+\input{chapters_latex/chapter05}
 \end{document}
