Add solutions for exercises in chapter 6

--- a/solutions.tex
+++ b/solutions.tex
@@ -6,6 +6,7 @@
 \usepackage{graphicx}
 \usepackage{float}
 \usepackage{xcolor}
+\usepackage{caption}
 
 \setlength{\parindent}{0pt}  % Turn off indentation globally
 
@@ -26,4 +27,5 @@
 \input{chapters_latex/chapter03}
 \input{chapters_latex/chapter04}
 \input{chapters_latex/chapter05}
+\input{chapters_latex/chapter06}
 \end{document}
