--- a/solutions.tex
+++ b/solutions.tex
@@ -7,6 +7,7 @@
 \usepackage{float}
 \usepackage{xcolor}
 \usepackage{caption}
+\usepackage{enumitem}
 
 \setlength{\parindent}{0pt}  % Turn off indentation globally
 
@@ -28,4 +29,5 @@
 \input{chapters_latex/chapter04}
 \input{chapters_latex/chapter05}
 \input{chapters_latex/chapter06}
+\input{chapters_latex/chapter07}
 \end{document}
