Add solutions for exercises in chapter 8

--- a/solutions.tex
+++ b/solutions.tex
@@ -30,4 +30,5 @@
 \input{chapters_latex/chapter05}
 \input{chapters_latex/chapter06}
 \input{chapters_latex/chapter07}
+\input{chapters_latex/chapter08}
 \end{document}
