Add solutions for exercises in chapter 9

--- a/solutions.tex
+++ b/solutions.tex
@@ -31,4 +31,5 @@
 \input{chapters_latex/chapter06}
 \input{chapters_latex/chapter07}
 \input{chapters_latex/chapter08}
+\input{chapters_latex/chapter09}
 \end{document}
