--- a/solutions.tex
+++ b/solutions.tex
@@ -32,4 +32,5 @@
 \input{chapters_latex/chapter07}
 \input{chapters_latex/chapter08}
 \input{chapters_latex/chapter09}
+\input{chapters_latex/chapter10}
 \end{document}
