Add solutions for exercises in chapter 11

--- a/solutions.tex
+++ b/solutions.tex
@@ -33,4 +33,5 @@
 \input{chapters_latex/chapter08}
 \input{chapters_latex/chapter09}
 \input{chapters_latex/chapter10}
+\input{chapters_latex/chapter11}
 \end{document}
