Add solutions for exercises in chapter 12

--- a/solutions.tex
+++ b/solutions.tex
@@ -34,4 +34,6 @@
 \input{chapters_latex/chapter09}
 \input{chapters_latex/chapter10}
 \input{chapters_latex/chapter11}
+\input{chapters_latex/chapter12}
+
 \end{document}
